<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".PostActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/coldaltitudeclouds" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="8sp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/simbalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:src="@drawable/simbalogowh2"
        android:scaleX="0.9"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8sp"
        android:background="#0000"
        android:text="@string/back_button"
        android:textColor="@color/colorBlue"
        android:textSize="20sp"
        android:fontFamily="@font/fontavenirnext"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle" />


    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/post_button"
        android:text="@string/post_button"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:fontFamily="@font/fontavenirnext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simbalogo"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:gravity="center">

            <Space
                android:layout_width="18sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="@style/TextShadow"
                android:fontFamily="@font/fontavenirnext"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <Space
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                android:fontFamily="@font/fontavenirnext"/>

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:gravity="center">

            <Space
                android:layout_width="18sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/TextShadow"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/fontavenirnext"/>

            <Space
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                android:fontFamily="@font/fontavenirnext"/>
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:gravity="center">

            <Space
                android:layout_width="18sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                style="@style/TextShadow"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/fontavenirnext"/>

            <Space
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:background="@color/colorWhite"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                android:fontFamily="@font/fontavenirnext"/>

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:gravity="center">

            <Space
                android:layout_width="18sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                style="@style/TextShadow"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/fontavenirnext"/>

            <Space
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/editStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                android:fontFamily="@font/fontavenirnext"/>

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:gravity="center">

            <Space
                android:layout_width="18sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/Comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                style="@style/TextShadow"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/fontavenirnext"/>

            <Space
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@color/colorWhite"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                android:fontFamily="@font/fontavenirnext"/>

        </TableRow>
    </TableLayout>
    <Spinner
        android:id="@+id/user_id"
        android:layout_width="200sp"
        android:layout_height="0sp"
        android:layout_marginBottom="4sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="4sp"
        android:background="@color/colorWhite"
        android:fontFamily="@font/fontavenirnext"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>